--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "terrylinooo/seo-search-permalink",
-    "description": "Change default search URLs to the SEO friendly URLs. It may improve your SERP to boost your site traffic. The default URL ?s=keyword will be changed to /search/keyword, and you could change the {search base} for your needs.",
+    "description": "Change default search URLs to SEO-friendly URLs, which may enhance your SERP rankings and increase your site traffic. The default URL ?s=keyword will be changed to /search/keyword, and you can adjust the {search base} as needed.",
     "keywords": ["wordpress-plugin", "wordpress-seo", "wordpress-permalink"],
-    "homepage": "https://github.com/terrylinooo/mynote-plugin",
+    "homepage": "https://github.com/terrylinooo/seo-search-permalink",
     "license": "GPL-3.0-or-later",
     "authors": [
         {
